[#noissue] Fix inspector agent list overflow

--- a/web/src/main/angular/src/app/core/components/server-and-agent-list/server-and-agent-list-container.component.css
+++ b/web/src/main/angular/src/app/core/components/server-and-agent-list/server-and-agent-list-container.component.css
@@ -1,7 +1,7 @@
 :host {
     display: block;
-    /* 71px = 38px(Search Input) + 33px(Title) */
-    height: calc(100% - 71px); 
+    /* 89px = 48px(Search Input) + 41px(Title) */
+    height: calc(100% - 89px); 
     overflow-y: auto;
 }
 
